# geekbar

./: Cargo.toml  package.json  pnpm-lock.yaml  tailwind.config.cjs  vite.config.ts
.github/workflows/: release.yml
geekbar/: Cargo.toml
geekbar-cli/: Cargo.toml
geekbar-cli/src/: main.rs
geekbar-core/: Cargo.toml
geekbar-core/examples/multi_workflows/: main.rs  workflow_1.json  workflow_2.json
geekbar-core/examples/search/: main.rs  workflow.json
geekbar-core/src/: error.rs  executor.rs  lib.rs  link.rs  node.rs  params.rs  prompt.rs  workflow.rs
geekbar-core/src/nodes/: clipboard.rs  list_filter.rs  mod.rs  notify.rs  open_url.rs  prelude.rs  request.rs  set_vars.rs  trigger.rs
geekbar-core/src/utils/: common.rs  mod.rs  render_template.rs
geekbar-gui/: .gitignore  Cargo.toml  tauri.conf.json
geekbar-gui/src/: commands.rs  main.rs  system_tray.rs  utils.rs
geekbar-gui/views/: index.html  package.json  splashscreen.html  tailwind.config.cjs
geekbar-gui/views/scripts/: release.cjs
geekbar-gui/views/src/: App.tsx  main.ts  router.ts
geekbar-gui/views/src/hooks/: configProvider.ts  state.ts  theme.ts
geekbar-gui/views/src/pages/geekbar/: index.tsx  service.ts
geekbar-gui/views/src/pages/setting/: canvas.tsx  explorer.tsx  index.tsx  service.ts
geekbar-gui/views/src/pages/setting/lib/: setting.css  setting.ts
geekbar-gui/views/src/pages/setting/schemas/: expr.ts  index.ts  types.ts
geekbar-gui/views/src/theme/: utils.ts
geekbar-gui/views/src/theme/themes/: defaultDark.ts  defaultLight.ts
geekbar-gui/views/src/utils/: dialog.ts  index.ts  lifetimeListener.ts  message.ts  notification.ts  window.ts
geekbar-store/: Cargo.toml
geekbar-store/src/: config.rs  lib.rs  store.rs  workflow_meta.rs
geekbar-tui/: Cargo.toml
geekbar-tui/src/: dark.toml  light.toml  main.rs  workflow.rs
geekbar/src/: lib.rs
scripts/: release.cjs
src/: App.tsx  main.ts  router.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  main.rs  system_tray.rs  workflow.rs  workflows.rs
src/hooks/: configProvider.ts  locale.ts  theme.ts
src/i18n/: index.ts
src/i18n/locales/: index.ts
src/pages/geekbar/: index.tsx  service.ts
src/pages/setting/: canvas.tsx  configDialog.tsx  contextmenu.tsx  explorer.tsx  index.tsx  service.ts  workflow.json
src/pages/setting/configForm/: index.tsx
src/pages/setting/configForm/formItems/: Array.tsx  Checkbox.tsx  Object.tsx  Switch.tsx  Textarea.tsx  json.tsx  list.tsx  record.tsx
src/pages/setting/lib/: setting.css  setting.ts
src/pages/setting/schemas/: types.ts
src/pages/setting/schemas/nodeSchemas/: clipboard.ts  listFilter.ts  openUrl.ts  trigger.ts
src/pages/setting/types/: clipboard.ts  index.ts  listFilter.ts  notify.ts
src/theme/: index.ts  types.ts
src/theme/themes/: defaultDark.ts  defaultLight.ts
src/utils/: index.ts  jsxHelper.ts  window.ts
(+10 files in other folders)
