[package]
name = "geekbar-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
geekbar_core = { path = "../geekbar-core" }
dialoguer = { version = "0.10.2", features = ["fuzzy-select"] }
serde_json = "1.0.87"
anyhow = "1.0.66"
