[package]
name = "geekbar_core"
description = "geekbar core lib"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
chrono = "0.4.19"
clipboard = "0.5.0"
futures = "0.3.21"
handlebars = "4.3.1"
log = "0.4.17"
notify-rust = { version = "4.5.8", default-features = false, features = ["d"] }
open = "3.0.1"
regex = "1.6.0"
reqwest = { version = "0.11.11", features = ["json", "blocking"] }
rust-crypto = "0.2.36"
serde = { version = "1.0.139", features = ["derive"] }
serde_json = "1.0.82"
thiserror = "1.0.31"
typetag = "0.2.1"
url = "2.2.2"
uuid = { version = "1.1.2", features = ["serde", "v4"] }
geekbar_dialoguer = { version = "0.1.0", features = ["fuzzy-select"] }
ctrlc = "3.2.2"
crossbeam-channel = "0.5.5"
directories = "4.0.1"
# https://github.com/enigo-rs/enigo/issues/55
enigo = "0.0.14"
pinyin = "0.9.0"

[dev-dependencies]
anyhow = "1.0.58"
