[package]
name = "geekbar-store"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
geekbar_core = { path = "../geekbar-core" }
anyhow = "1.0.66"
directories = "4.0.1"
uuid = { version = "1.2.1", features = ["serde", "v4"] }
serde_json = "1.0.87"
serde = { version = "1.0.147", features = ["derive"]}
