[package]
name = "geekbar-tui"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "gb"
path = "src/main.rs"

[dependencies]
geekbar_core = {path = "../geekbar-core"}
anyhow = "1.0.58"
cursive = { version = "0.18.0", features = ["toml"]}
config = {version = "0.13.1", default-features = false, features = ["json"]}
directories = "4.0.1"
serde = "1.0.139"
serde_json = "1.0.82"
log = "0.4.17"
