[package]
name = "geekbar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
geekbar_core = { path = "../geekbar-core" }
geekbar_store = { path = "../geekbar-store" }
serde_json = "1.0.87"
