[package]
name = "geekbar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
geekbar_core = { path = "../geekbar-core" }
geekbar_store = { path = "../geekbar-store" }
serde_json = "1.0.87"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
uuid = { version ="1.2.1", features = ["v4"]}
